test/compilable/objconst4.d

struct S
{
	const(Object)ref o;
}

void main()
{
	S s;
	s.o = new Object;
}